[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assate/HostileBullet.png" type="Texture" id=1]
[ext_resource path="res://Object/Bullet/HostileBullet.gd" type="Script" id=2]
[ext_resource path="res://Object/Component/TargetDetector/TargetDetector.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assate/GlowCircle.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="CircleShape2D" id=2]
radius = 3.0

[node name="HostileBullet" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Glow" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.988235, 0.231373, 0, 0.623529 )
show_behind_parent = true
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="TargetDetector" parent="." instance=ExtResource( 3 )]
collision_mask = 17

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TargetDetector"]
shape = SubResource( 2 )

[node name="LifeTime" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[connection signal="area_entered" from="TargetDetector" to="." method="_on_TargetDetector_detecting_area"]
[connection signal="body_entered" from="TargetDetector" to="." method="_on_TargetDetector_detecting_body"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
